Fix travis ci not building .NET Standard project

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,7 @@
 language: csharp
-solution: EasyNetQ.PollyHandlerRunner.sln
+dist: trusty
+sudo: required
+mono: none
+dotnet: 2.0.0
+script:
+ - ./build.sh --quiet verify
