--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,7 @@ dist: trusty
 sudo: required
 mono: none
 dotnet: 2.0.0
+before_script:
+  - chmod a+x ./build.sh
 script:
  - ./build.sh --quiet verify
